"Edits made by Nate to Sections III and IV"

--- a/nate-am-review/APR.bib
+++ b/nate-am-review/APR.bib
@@ -1,12 +1,59 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-01-11 14:47:56 -0700 
+%% Created for Nathan Scott David Forrest Everrett Johnson at 2019-02-08 14:16:41 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Krizhevsky,
+	Date-Added = {2019-02-07 15:04:10 -0700},
+	Date-Modified = {2019-02-08 14:16:38 -0700}}
+
+@article{Egmont-Petersen2002,
+	Author = {M. Egmont-Petersen and D. de Ridder and H. Handels},
+	Date-Added = {2019-02-07 15:02:16 -0700},
+	Date-Modified = {2019-02-07 15:03:06 -0700},
+	Journal = {Pattern Recognition},
+	Month = {May},
+	Pages = {2279-2301},
+	Title = {Image process with neural networks -- a review},
+	Volume = {35},
+	Year = {2002}}
+
+@article{Jin2008,
+	Author = {Yaochu Jin and Bernhard Sendhoff },
+	Date-Added = {2019-02-06 09:54:46 -0700},
+	Date-Modified = {2019-02-06 09:55:57 -0700},
+	Journal = {IEEE Transactions of Systems, Man, and Cybernetics - Parc C: Applications and Reviews},
+	Keywords = {machine learning, theory, multi objective optimization, surrogate modeling},
+	Month = {May},
+	Number = {3},
+	Title = {Pareto-Based Multiobjective Machine Learning: An Overview and Case Studies},
+	Volume = {38},
+	Year = {2008}}
+
+@article{Lu2019,
+	Author = {Xufei Lu and Xin Lin and Michele Miumenti and Miguel Cervera and Yunlong Hu and Xianglin Ji and Liang Ma and Weidong Huang},
+	Date-Added = {2019-02-04 09:24:00 -0700},
+	Date-Modified = {2019-02-04 09:25:26 -0700},
+	Journal = {International Journal of Mechanical Sciences},
+	Month = {January},
+	Title = {In-situ Measurements and Thermo-mechanical Simulation of Ti-6Al-4V Laser Solid Forming Processes},
+	Year = {2019}}
+
+@article{Rajan2009,
+	Author = {Krishna Rajan and Changwon Suh and Patricio F. Mendez},
+	Date-Added = {2019-01-30 15:07:20 -0700},
+	Date-Modified = {2019-01-30 15:08:22 -0700},
+	Journal = {Statistical Analysis and Data Mining},
+	Month = {May},
+	Pages = {361-371},
+	Title = {Principal component analysis and dimensional analysis as materials informatics tools to reduce dimensionality in materials science and engineering},
+	Volume = {1},
+	Year = {2009}}
 
 @article{Delgado2012,
 	Author = {Jordi Delgado and Joaquim Ciurana and Ciro A. Rodriguez},
@@ -80,14 +127,6 @@
 	Month = {September},
 	Title = {Optimal Design of High-Strength Ti-Al-V-Zr Alloys through a Combinatorial Approach},
 	Volume = {11},
-	Year = {2018}}
-
-@article{Wang2018,
-	Author = {Zhi-Lei Wang and Yoshitaka Adachi},
-	Date-Added = {2018-12-20 11:32:56 -0700},
-	Date-Modified = {2018-12-20 12:15:16 -0700},
-	Journal = {Materials Science and Engineering A},
-	Title = {Property prediction and properties-to-microstructure inverse analysis of steels by a machine-learning approach},
 	Year = {2018}}
 
 @article{Wagner2016,
