--- a/nate-am-review/SectionIII/Featurization.tex
+++ b/nate-am-review/SectionIII/Featurization.tex
@@ -1,25 +1,12 @@
 \subsubsection{Featurization of Qualitative Image Data}
-Images of material microstructures are widespread, (relatively) easily produced, and one of the most important ways that material scientists synthesize material information across domains. There is much important information which can be contained in an image: grain sizes and morphology; texture; retained phases and orientations; presence of defects; surface roughness; and more. All of these parameters are important to a material scientists' intuition. These images are also a common method of studying the final state of additively manufactured parts.
-
-The intuition gained from human interpretation of images is not always encodable in a way that is compatible with models. A human might make a complicated interpretation of an image, such as ``the microstructure is mostly acicular, with some prior grains present, and a string of pores near the boundary." Surely, such a description conjures an image in the reader's head of what such a microstructure might look like. Encoding the same information into a finite element mesh of a microstructure isn't necessarily straightforward. It can be accomplished, for sure, but transforming an observed microstructure into quantitative information requires time-consuming methods.
+The intuition gained from human interpretation of images is not always encodable in a way that is compatible with models. A human might make a complicated interpretation of an image, such as ``the microstructure is mostly acicular, with some prior grains present, and a string of pores near the boundary." Surely, such a description conjures an image in the reader's head of what such a microstructure might look like. Encoding the same information into a finite element mesh of a microstructure isn't necessarily straightforward. It can be accomplished, for sure, but transforming an observed microstructure into quantitative information requires time-consuming methods. 
 
 Image recognition algorithms are making strides at automating quantification of information from images, while also being able to produce qualitative descriptions of the images. Information such as the size of grains, orientation of grains, presence of cracks or pores, different phases, and more can be automatically identified through computer vision. DeCost et al. have made strides in turning metallographs into sets of quantitative information \cite{DeCost2015, DeCost2017, DeCost2017a}. 
 
-In one particular example, DeCost et al. utilize scale invariance feature transform (SIFT) in order to identify possible features in images. The SIFT algorithm is a widely used algorithm for feature identification and is implemented in many open-source packages, such as OpenCV for C++ or Python \textbf{cite OpenCV}. SIFT relies on identifying regions of maximal and minimal intensity in successively blurred versions of an image. The gradient of pixels are regions of extremal intensity are then computed, resulting in a keypoint descriptor which encodes the size and orientation of a feature, as well as generates a descriptor for identifying that object. The idea behind SIFT is that similar features across images will have similar descriptors. This way, common features can be identified across images.
+In one particular example, DeCost et al. utilize scale invariance feature transform (SIFT) in order to identify possible features in images. The SIFT algorithm is a widely used algorithm for feature identification and is implemented in many open-source packages, such as OpenCV for C++ or Python \textbf{cite OpenCV}. SIFT relies on identifying regions of maximal and minimal intensity in successively blurred versions of an image. The gradient of pixels are regions of extremal intensity are then computed, resulting in a keypoint descriptor which encodes the size and orientation of a feature, as well as generates a descriptor for identifying that object. The idea behind SIFT is that similar features across images will have similar descriptors. This way, common features can be identified across images. 
 
 DeCost et al. performed SIFT on a database of microstructure images across several alloys \cite{DeCost2015}. The ``features'' that were identified across \textit{all} images were then clustered by $k$-means clustering to identify a dictionary of features. Human investigation can assign qualitative labels to clusters, such as ``$\alpha$ grain" or ``pore" or ``grain boundary." Now, new images can be analyzed with SIFT and their features can be compared to the dictionary of human-interpretable feature descriptors. 
 
-Not only does this process partially automate analysis of images it also automates translation of image-level information into quantitative information. Grain size can be measured by the number of pixels in an identified grain. Orientation of grains can be determined from the values of the keypoint descriptor. The number of pores in an image can be counted as the number of features which match ``pore" in the dictionary. Of course, a human could perform all of this with a ruler and their eyes. However, a computer can perform the same process much faster and on many more images.
+Not only does this process partially automate analysis of images it also automates translation of image-level information into quantitative information. Grain size can be measured by the number of pixels in an identified grain. Orientation of grains in the image can be determined from the values of the keypoint descriptor. The number of pores in an image can be counted as the number of features which match ``pore" in the dictionary. Of course, a human could perform all of this with a ruler and their eyes. However, a computer can perform the same process much faster and on many more images. 
 
-Chowdhury et al. took a more expansive approach to performing feature identification in microstructures. In particular, they were looking to classify microstructures as either dendritic or non dendritic. Chowdhury employed 8 different feature identification methods for a dataset of images. Classification was performed using support vector machines (SVM), Na\"ive Bayes, nearest neighbor, and a committee of the three previous classification methods \cite{Chowdhury2016}. Chowdhury's wide approach to image classification compared the predictive ability of all combinations of feature identification and classification methods, achieving classification accuracies above 90\%.
-
-Chowdhury's study illustrates the depth of machine learning as a discipline and the many, many, many possible implementations which \textit{could} be adopted for different tasks in additive manufacturing. This review is only a brief introduction to the power of statistical analysis methods in materials science. 
-
-
-%
-%\begin{itemize}
-%	\item Long and Kusne Example (possibly delete?)
-%\end{itemize}
-%Common characterization techniques used for AM metals, like X-ray diffractometry (XRD), mechanical testing, composition mapping, and electron microscopy are time-consuming and costly, leading to protracted experimental and analysis cycles \cite{Ziolkowski2014}. 
-%
-%This type of process is ideal for studying newly observed systems, especially in cases where there is uncertainty about all the phases or structures that might be present. In such cases, a latent variable analysis tool can give approximations of the determining factors that underlie a process, property, or structure. It also enables the search for specific properties in a more informed manner. Kusne et al. applied a clustering method similar to Long's method for the same Fe-Ga-Pd ternary system \cite{Kusne2015a}. They were searching for a candidate material that exhibited magnetic anisotropy and was free of rare-earth elements. By applying mean shift theory---a preprocessing technique like NMF that clusters data into lower dimensional descriptor sets---they were able to quickly identify composition boundaries for phases in this ternary system. From there, a GA approach was used to find the best candidate material. They ended up finding a novel phase that exhibited the property of interest. This approach had proven to be somewhat successful in previous investigations of phase identification for multistructure systems \cite{Serra2007}. Deconvolving material information into basis vectors that can produce structural information is ideal because it also implicitly unlocks information about aspects of property space.
+Chowdhury et al. took a more expansive approach to performing feature identification in microstructures. In particular, they were looking to classify microstructures as either dendritic or non dendritic. Chowdhury employed 8 different feature identification methods for a dataset of images. Classification was performed using support vector machines (SVM), Na\"ive Bayes, nearest neighbor, and a committee of the three previous classification methods \cite{Chowdhury2016}. Chowdhury's wide approach to image classification compared the predictive ability of all combinations of feature identification and classification methods, achieving classification accuracies above 90\%. 
