--- a/nate-am-review/SectionIV/SectionIV.tex
+++ b/nate-am-review/SectionIV/SectionIV.tex
@@ -1,1 +1,6 @@
 \section{How existing ML approaches can be used in AM}
+
+\subsection{The History of Machine Learning in the Material Sciences}
+
+\subsection{Case Studies of Machine Learning for Additive Manufacturing}
+\input{SectionIV/CaseStudies}
