--- a/nate-am-review/SectionIII/InSituMonitoring.tex
+++ b/nate-am-review/SectionIII/InSituMonitoring.tex
@@ -1,8 +1,27 @@
-\subsubsection{In Situ Automated Feature Detection}
-Thus far, in situ control in AM has been consistently ranked as one of the most-needed technologies for advancing the technology \cite{Mani2017, Tapia2014}. If the ideal conditions under which to perform manufacturing can be understood, monitoring the process will ensure the desired conditions are achieved. Or, the conditions under which certain defects form could be ascertained. In this case scientists would want to be able to detect the onset of those conditions to adjust the heat source parameters and fix the problem. All of this will require in situ sensing and a level of robotic control. 
+\subsubsection{In Situ Process Monitoring and Feedback}
+Computer vision is a class of image recognition algorithms that have been developed for automated feature identification in images. Intelligent computer vision utilizes machine learning algorithms to identify objects and features in images and time-series data. 
 
-A study by Gobert et al. investigated using X-ray CT data to correlate with images obtained by a DSLR camera during the printing process. Gobert et al. printed a single part, containing several different features, and recorded the print results before and after every layer using a DSLR and eight different lighting conditions. The part was then characterized using X-ray CT to find the location and size of pores and inclusions. A matrix list of pixel intensities $I(x,y,z)$ was convolved using a Gaussian blur, whereby each CT image slice was iteratively blurred in order to increase the contrast of differently sized features. This same type of blurring is common in many image recognition algorithms for images with multiple features of varying size \cite{Lowe2004, Bay2008}. The result of the Gaussian blur identifies pixel intensities as high-intensity pixels (inclusions) or low-intensity pixels (voids), with the remaining identified as part of the bulk. Clustering with $k$-means was then applied to group pixels into single pores.
+Computer vision can be employed in additive manufacturing to monitor the printing process, such as measuring temperature profiles, observing melt pool morphologies, and automatically detecting defect formation. Doing so will require methods for in situ process monitoring and data collection. Thus far, in situ control in AM has been consistently ranked as one of the most-needed technologies for advancing the technology \cite{Berumen2010, Tapia2014, Mani2017}. The combination of rapid solidification and the small length scales of AM solidification can make traditional process monitoring approaches difficult. Machine learning can fill in gaps where human-specified process monitoring models are insufficient.
 
-The information from the convolution operation was then used to train an algorithm that detects defect formation from the DSLR results. One of the underlying assumptions of the study was that, even though the DSLR images did not record during the melting and solidification process, features would appear in each image that could be correlated back to the higher-resolution data in the CT images. The DSLR images were projected into the feature space of the convolved CT data using an affine transformation through linear least squares. This transformation provides a mapping by which \textit{new} image data can be mapped to the feature space, giving an estimate of whether or not the new image contains a defect or not. The study by Gobert et al. was able to accurately predict whether or not an image contained a defect with 85\% accuracy after all the DSLR lighting conditions were combined into an ensemble classifier. Similar studies have also achieved good prediction accuracy for AM using convolutional neural networks \cite{Scime2018} and dictionary methods \cite{Abdelrahman2017}. Kernel ridge regression was implemented successfully for fault detection in general manufacturing systems \cite{Wang2018}.
+Process monitoring involves acquisition of realtime signals which can be processes to reveal information about manufacturing. McKeown et al. used dynamic transmission electron microscopy to measure solidification rates in powder bed AM \cite{McKeown2016}. Bertoli et al. also characterized cooling rates using high speed imaging \cite{Bertoli2017}. Raplee et al. used thermography to monitor the solidification and cooling rates of electron beam powder bed fusion, then related the temperature profiles to defect and microstructural characteristics \cite{Raplee2017}. Distortion of parts due to thermal cycling was investigated by Denlinger et al. by means of thermocouples in contact with the build substrate \cite{Denlinger2015}. All of these methods are amenable to aid by computer vision. 
 
-With this type of in situ image recognition, defect formation can be detected during the printing process, precluding the need for certain post-characterization techniques. If defects form and are detected, then the printing process can be stopped, saving powder/feedstock, operating costs, and operating time. However, an even more desirable result is to first detect defect formation, then correct for it in situ. To do so, information will have to be assembled that relates the detection of defects, the manner in which the defects formed, and the prescribed fix to undo or stop the defects from growing. It is likely that combining all these information sources will require a significant leap in scientists' ability to apply machine learning algorithms to widely varying data sets and types. 
+There are two areas of need for in situ measurement: \begin{itemize}
+	\item Processing of signals real time to identify features of the AM process
+	\item Multi objective feedback and control
+\end{itemize} \textbf{There are several review articles on AM (Tapia, for example) which could go here, or could go in the intro paragraph of Section III.c}
+
+Many of the difficulties in real time signal processing is the complexity and number of signals being acquired. Identifying features of interest in a signal becomes difficult when the necessary signal features to identify are not known. Researchers are well aware that defects form during the additive process. Which signals to monitor and what about the signals are indicative of a defect is not known. 
+
+Setup for the following information:
+\begin{itemize}	
+	\item Explain the concept of identifying features in images (filters, SIFT/SURF)
+	\item Explain template matching using a dictionary of identified features
+	\item Explain the concept of `learning' filters through a CNN
+	\item Explain the use of CNNs in AM process monitoring
+	\item Move Gobert to case study section
+\end{itemize}
+
+Convolutional neural networks (CNNs) have proven to be one of the best computer vision approaches for identifying complex features in images \textbf{citation?}. At the highest level, CNNs use large databases of labeled information to learn features in the image that indicate whether or not certain human-identified objects are present. The level of abstractness of the object is arbitrary, so long as the dataset contains enough images with each feature to be identified. This is an improvement over current methods whereby humans develop models specifically to identify features of the printing process. Human-specified models for defect detection -- \textbf{search around the literature you've cited for an example of a human-specified model that is very specific to the problem being address, perhaps Abdelrahman? \cite{Abdelrahman2017}.} -- can be limited in their ability to identify edge cases, as well as in their ability to detect multiple types of defect formation. Convolutional neural networks can identify multiple features or defects in an image simultaneously. A downside to CNNs is that they require \textbf{very} large datasets (thousands of images, at the least) of labeled data to be successful. Neural networks have already been implemented for in situ AM analysis by Scime et al. \cite{Scime2018}, Yuan et al \cite{Yuan2018}. 
+
+Another computer vision approach is called \textit{template matching} and does not require the same dataset size as CNNs. Template matching is the process of comparing computer-vision identified `keys' in an image with a database of keys associated with a certain feature. For example, powder inclusion in a melt pool can often be characterized by a local change in reflectivity in the melt pool near the particle \textbf{cite???? where are you coming up with this, or are you asssuming?}. A feature identification algorithm such as the scale invariant feature transform (SIFT) \cite{Lowe2004} or speeded-up robust features (SURF) \cite{Bay2008} can identify common characteristics of a powder inclusion in an image. Template matching involves using an algorithm like SIFT and SURF to identify features in an image, then compare those features with a database of typical AM features, like porosity or powder inclusion. If keys of the feature in the image closely match a key in the template database then it is likely that feature exists in the image. 
+
