--- a/nate-am-review/SectionIII/SectionIII.tex
+++ b/nate-am-review/SectionIII/SectionIII.tex
@@ -1,38 +1,34 @@
-\section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
-The interdisciplinary nature of AM has naturally led to a compartmentalization of scientific efforts. Since full-scale models of AM are not widespread, many scientists choose to focus on a single problem or process. 
+%\section{Current ICME Tools are Well Equipped to Integrate with an ML Framework}
+%The interdisciplinary nature of AM has naturally led to a compartmentalization of scientific efforts. Since full-scale models of AM are not widespread, many scientists choose to focus on a single problem or process. 
+%
+%The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Different methods of analysis and characterization for different aspects of AM all tie-in well with different machine learning algorithms. Even more so, ML can be used to unite knowledge creation across AM's spatiotemporal scales.
+%
+%%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
+%\subsection{Pre-Build Design}
+%\input{SectionIII/AlloyDesign.tex}
+%\input{SectionIII/DesignOfExperiments}
+%\input{SectionIII/TopologyOptimization}
 
-The following section details how machine learning approaches can tie-in to current efforts in AM. Since the study of AM is often focused around specific problems, this section is tailored to many common areas of study within AM. Different methods of analysis and characterization for different aspects of AM all tie-in well with different machine learning algorithms. Even more so, ML can be used to unite knowledge creation across AM's spatiotemporal scales.
-
-~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
-\subsection{Pre-Build Design}
-\input{SectionIII/AlloyDesign.tex}
-\input{SectionIII/DesignOfExperiments}
-\input{SectionIII/TopologyOptimization}
-
-
-%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%
-\subsection{Process Design}
-The road to a comprehensive model requires several key advancements, including
-\begin{itemize}
-	\item Computationally accessible models
-	\item Knowledge transfer methods between sub-physics models
-	\item Many-parameter empirical models
-\end{itemize}
-to name a few \cite{King2015}. These areas can be tackled, in kind, with machine learning applications.
-	
-\input{SectionIII/ReducingComputationalComplexity}
-\input{SectionIII/SurrogateModeling}
-\input{SectionIII/KnowledgeTransfer}
+%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
+%\subsection{Process Design}
+%\input{SectionIII/ReducingComputationalComplexity}
+%\input{SectionIII/SurrogateModeling}
 
 
-%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%
-\subsection{Process Monitoring and Characterization}
-There is an outstanding need to incorporate information gained about AM from the machine learning approaches discussed above into the manufacturing process. There are already many critical design criteria that AM users are aware of, such as constraints on free standing structures \cite{Gaynor2016}, the impact of particle characteristics on quality \cite{Deng2018, Ziolkowski2014}, the interaction of energy density with pore formation \cite{King2014, Cherry2015}, and more. These considerations and constraints need to be incorporated and monitored in situ to ensure final part quality. 
+%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~%~
+%\subsection{Process Monitoring and Characterization}
+%Monitoring of AM processes produces data equally numerous to, if not in excess of, the data produced by parametric analysis and modeling. The numerousness of time series data in AM warrants usage of quick, efficient, and robust signal processing methods for process monitoring, feedback, and control. These signal processing algorithms are closely related to machine learning and may serves as pre-processing techniques for using data in other machine learning applications like clustering and regression. 
+%
+%Machine learning algorithms can serve three problems in signal processing of AM:
+%\begin{itemize}
+%	\item real time analysis, event detection, and feedback mechanisms during manufacture;
+%	\item fast analysis and quantification of image data
+%	\item discovery of variables which can be used to study and describe the AM process (referred to as \textit{descriptor analysis})
+%\end{itemize}
 
-Machine learning can also be adopted for in situ process monitoring and characterization, with multiple possible applications. Some of the most promising applications include automated computer vision monitoring of powder beds for the identification of defect formation, feedback and control mechanisms, and ex-situ image classification of microstructure images.
 
 \input{SectionIII/InSituMonitoring}
-\input{SectionIII/Featurization}
+%\input{SectionIII/Featurization}
  
 
 
